--- a/src/app/pages/progress/progress.component.html
+++ b/src/app/pages/progress/progress.component.html
@@ -1,1 +1,54 @@
-<p>progress works!</p>
+<div class="row">
+  <div class="col-12">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Barra de progreso</h5>
+        <div class="progress">
+          <div
+            class="progress-bar progress-bar-striped progress-bar-animated"
+            role="progressbar"
+            [attr.aria-valuenow]="progresoAzul"
+            aria-valuemin="0"
+            aria-valuemax="100"
+            [style.width]="progresoAzul + '%'"
+          ></div>
+        </div>
+        <br />
+        <div class="progress">
+          <div
+            class="progress-bar progress-bar-striped progress-bar-animated bg-success"
+            role="progressbar"
+            [attr.aria-valuenow]="progresoVerde"
+            aria-valuemin="0"
+            aria-valuemax="100"
+            [style.width]="progresoVerde + '%'"
+          ></div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-6">
+    <div class="card">
+      <div class="card-body">
+        <app-incrementador          
+          nombre="Progress Azul"
+          [progreso]="progresoAzul"
+          (cambioValor)="progresoAzul = $event"
+        ></app-incrementador>
+      </div>
+    </div>
+  </div>
+  <div class="col-6">
+    <div class="card">
+      <div class="card-body">
+        <app-incrementador          
+          nombre="Progress Verde"
+          [progreso]="progresoVerde"
+          (cambioValor)="progresoVerde = $event"
+        ></app-incrementador>
+      </div>
+    </div>
+  </div>
+</div>
