--- a/src/app/pages/account-settings/account-settings.component.html
+++ b/src/app/pages/account-settings/account-settings.component.html
@@ -7,20 +7,20 @@
                 <div class="r-panel-body">
                     <ul id="themecolors" class="m-t-20">
                         <li><b>Con el sidebar claro</b></li>
-                        <li><a (click)='default' data-theme="default" class="selector default-theme">1</a></li>
-                        <li><a (click)='green' data-theme="green" class="selector green-theme">2</a></li>
-                        <li><a (click)='red' data-theme="red" class="selector red-theme">3</a></li>
-                        <li><a (click)='blue' data-theme="blue" class="selector blue-theme">4</a></li>
-                        <li><a (click)='purple' data-theme="purple" class="selector purple-theme">5</a></li>
-                        <li><a (click)='megna' data-theme="megna" class="selector megna-theme">6</a></li>
+                        <li><a (click)="CambiarColor('default')" data-theme="default" class="selector default-theme working">1</a></li>
+                        <li><a (click)="CambiarColor('green')" data-theme="green" class="selector green-theme">2</a></li>
+                        <li><a (click)="CambiarColor('red')" data-theme="red" class="selector red-theme">3</a></li>
+                        <li><a (click)="CambiarColor('blue')" data-theme="blue" class="selector blue-theme">4</a></li>
+                        <li><a (click)="CambiarColor('purple')" data-theme="purple" class="selector purple-theme">5</a></li>
+                        <li><a (click)="CambiarColor('megna')" data-theme="megna" class="selector megna-theme">6</a></li>
                         
                         <li class="d-block m-t-30"><b>Con el sidebar oscuro</b></li>
-                        <li><a data-theme="default-dark" class="selector default-dark-theme">7</a></li>
-                        <li><a data-theme="green-dark" class="selector green-dark-theme">8</a></li>
-                        <li><a data-theme="red-dark" class="selector red-dark-theme">9</a></li>
-                        <li><a data-theme="blue-dark" class="selector blue-dark-theme working">10</a></li>
-                        <li><a data-theme="purple-dark" class="selector purple-dark-theme">11</a></li>
-                        <li><a data-theme="megna-dark" class="selector megna-dark-theme">12</a></li>
+                        <li><a (click)="CambiarColor('default-dark')" data-theme="default-dark" class="selector default-dark-theme">7</a></li>
+                        <li><a (click)="CambiarColor('green-dark')" data-theme="green-dark" class="selector green-dark-theme">8</a></li>
+                        <li><a (click)="CambiarColor('red-dark')" data-theme="red-dark" class="selector red-dark-theme">9</a></li>
+                        <li><a (click)="CambiarColor('blue-dark')" data-theme="blue-dark" class="selector blue-dark-theme ">10</a></li>
+                        <li><a  (click)="CambiarColor('purple-dark')" data-theme="purple-dark" class="selector purple-dark-theme">11</a></li>
+                        <li><a  (click)="CambiarColor('megna-dark')" data-theme="megna-dark" class="selector megna-dark-theme">12</a></li>
                     </ul>
                 
                 </div>
